# vehicle-counter-api

./: .gitignore  db.sqlite3  pyproject.toml
app/: settings.py  urls.py
di/: use_cases.py
domain/model/: __init__.py  video_file.py
domain/use_case/: __init__.py  download_video_file.py  make_path.py  make_url.py  process_video_file.py  save_file.py
public/: urls.py
public/api/: __init__.py  process_video_file.py
public/static/js/: video_process.js
public/templates/: base.html
public/templates/partials/: footer.html  navbar.html
public/templates/public/: index.html
public/views/: index.py
