[tool.poetry]
name = "vehicle-counter-api"
version = "0.1.0"
description = ""
authors = ["Md. Taufiq Khan <khantaufiq2017@gmail.com>"]
readme = "README.md"
packages = [{include = "vehicle_counter_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
